# See https://setuptools.readthedocs.io/en/latest/build_meta.html
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "scispacy"
description = "A full SpaCy pipeline and models for scientific/biomedical documents."
readme = "README.md"
authors = [
    { name = "Allen Institute for Artificial Intelligence", email = "ai2-info@allenai.org" }
]
maintainers = [
    { name = "Allen Institute for Artificial Intelligence", email = "ai2-info@allenai.org" }
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = [
    "bioinformatics",
    "nlp",
    "spacy",
    "SpaCy",
    "biomedical",
]

# License Information.
# See PEP-639 at https://peps.python.org/pep-0639/#add-license-files-key
license-files = [
    "LICENSE",
]

requires-python = ">=3.9,<3.13"
dependencies = [
    "spacy>=3.7.0,<3.9.0",
    "scipy",
    "requests>=2.0.0,<3.0.0",
    "conllu",
    # numpy needs to be constrained until spacy and nmslib are rebuilt
    "numpy<2.0",
    "joblib",
    "nmslib>=2.1.2",
    "scikit-learn>=0.20.3",
    "pysbd",
]

# See https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls
# and also https://packaging.python.org/en/latest/specifications/well-known-project-urls/
[project.urls]
Homepage = "https://allenai.github.io/scispacy/"
Repository = "https://github.com/allenai/scispacy"

# see https://peps.python.org/pep-0735/ and https://docs.astral.sh/uv/concepts/dependencies/#dependency-groups
[dependency-groups]
tests = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
    "types-requests",
]

[tool.setuptools.packages.find]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.setuptools.dynamic]
version = {attr = "scispacy.version.VERSION"}
